@@ -172,11 +172,11 @@ int CDriveItem::GetImage() const
 	return GetMyImageList()->GetFileImage(m_path);
 }
 
-bool CDriveItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const
+bool CDriveItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol) const
 {
 	if (subitem == COL_NAME)
 	{
-		DrawLabel(m_list, GetMyImageList(), pdc, rc, state, width, focusLeft);
+		DrawLabel(m_list, GetMyImageList(), pdc, rc, state, width, focusLeft, textcol);
 		return true;
 	}
 	else if (subitem == COL_GRAPH)
@@ -839,6 +839,10 @@ void CSelectDrivesDlg::OnSysColorChange()
 }
 
 // $Log$
+// Revision 1.12  2004/11/08 00:46:26  assarbad
+// - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
+//   Same rules apply. (Green = encrypted / Blue = compressed)
+//
 // Revision 1.11  2004/11/05 16:53:06  assarbad
 // Added Date and History tag where appropriate.
 //
