@@ -43,11 +43,11 @@ CExtensionListControl::CListItem::CListItem(CExtensionListControl *list, LPCTSTR
 	m_image= -1;
 }
 
-bool CExtensionListControl::CListItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const
+bool CExtensionListControl::CListItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol) const
 {
 	if (subitem == COL_EXTENSION)
 	{
-		DrawLabel(m_list, GetMyImageList(), pdc, rc, state, width, focusLeft);
+		DrawLabel(m_list, GetMyImageList(), pdc, rc, state, width, focusLeft, textcol);
 	}
 	else if (subitem == COL_COLOR)
 	{
@@ -535,6 +535,10 @@ void CTypeView::OnSetFocus(CWnd* /*pOldWnd*/)
 
 
 // $Log$
+// Revision 1.9  2004/11/08 00:46:26  assarbad
+// - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
+//   Same rules apply. (Green = encrypted / Blue = compressed)
+//
 // Revision 1.8  2004/11/05 16:53:08  assarbad
 // Added Date and History tag where appropriate.
 //
